# esercitazione-pcs-2026

esercitazione1/: CMakeLists.txt  medie.cpp
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp  test_gradiente_coniugato.cpp
esercitazione2/: CMakeLists.txt  es2.cpp  printarray.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.hpp
esercitazione5/: measure_sorts.cpp  osservazioni_grafico.docx  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  grafi.hpp  main.cpp
esercitazione9/: CMakeLists.txt  algoritmi.hpp  bfs.dot  contenitori.hpp  dfs.dot  grafi.hpp  main.cpp
progetto/: CMakeLists.txt  algoritmi.hpp  controllo_netlist.hpp  dfs_depina.hpp  grafi.hpp  main.cpp  risolutore_sistema.hpp
